dataset1235/2025-2/2868285114/users/255123889/executions/3792430146_4093783519.log
== SUBMISSION (2025-09-02 23:10:34)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print((mensagem.lowwer()))
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((mensagem.lowwer()))
           ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((mensagem.lowwer()))
           ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((mensagem.lowwer()))
           ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:10:43)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print((mensagem.lowwer())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:11:38)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print(mensagem.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:12:21)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem.lower())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:10:51)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print(mensagem.lowwer())
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagem.lowwer())
          ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagem.lowwer())
          ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagem.lowwer())
          ^^^^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'lowwer'. Did you mean: 'lower'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:10:59)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print(mensagem.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero:
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:10:40)
-- CODE: 
num = int(input("Digite um numero: "))
if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"

  print((mensagem.lowwer())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    print((mensagem.lowwer())
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
